# hal

plugins/gui/include/gui/channel_manager/: channel_model.h
plugins/gui/include/gui/code_editor/: code_editor.h  code_editor_minimap.h  code_editor_scrollbar.h  line_number_area.h  minimap_scrollbar.h
plugins/gui/include/gui/docking_system/: dock_bar.h  (+3 more)
plugins/gui/src/: plugin_gui.cpp
plugins/gui/src/content_layout_area/: content_layout_area.cpp
plugins/gui/src/content_manager/: content_manager.cpp
plugins/gui/src/docking_system/: dock_bar.cpp  splitter_anchor.cpp  tab_widget.cpp
plugins/gui/src/file_manager/: file_manager.cpp
plugins/gui/src/graph_widget/: graph_context_manager.cpp
plugins/gui/src/main_window/: main_window.cpp
plugins/gui/src/module_model/: module_model.cpp  module_proxy_model.cpp
plugins/gui/src/netlist_relay/: netlist_relay.cpp
plugins/gui/src/notifications/: notification.cpp  notification_manager.cpp  notification_manager_qss_adapter.cpp
plugins/gui/src/overlay/: dialog_overlay.cpp
plugins/gui/src/welcome_screen/: recent_file_item.cpp  recent_files_widget.cpp
plugins/gui/src/window_manager/: window.cpp  window_manager.cpp
plugins/sat_solver/: CMakeLists.txt  test_plugin.py
plugins/sat_solver/cmake/: FindZ3.cmake
plugins/sat_solver/include/sat_solver/: plugin_sat_solver.h
plugins/sat_solver/include/utils/: BooleanFunctionWrapper.h  SubgraphFunctionGenerator.h
plugins/sat_solver/python/: python_bindings.cpp
plugins/sat_solver/src/: plugin_sat_solver.cpp
plugins/sat_solver/src/utils/: SubgraphFunctionGenerator.cpp
(+53 files in other folders)
